--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,26 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+    background-color: gray;
+    
 }
 
+button {
+    padding: 5px;
+    border: solid 2px black;
+    border-radius: 50%;
+    background-color: whitesmoke;
+}
+
+.title {
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .grid {
     background-color: white;
-    border:  solid 0.1px black;
-    /* width: 16px;
-    height: 16px; */
+    /* border:  solid 0.1px black; */
+    
 }
 
 
@@ -23,7 +36,7 @@ body {
     width: 350px;
     height: 350px;
     flex-wrap: wrap;
-    border: solid 1px black
+    border: solid 2px black;
     
     
 }
